fix : 댓글 다건 조회, 포스트 1건 조회를 제외한 LikeStatus 제거  #140